hphp/hack/test/typecheck/reset_after_foreach.php.like_types.exp
File "reset_after_foreach.php", line 17, characters 5-22:
Invalid assignment (Typing[4110])
File "reset_after_foreach.php", line 13, characters 11-29:
Expected ~Map<string, string> because it is an unenforceable type
File "reset_after_foreach.php", line 17, characters 19-22:
But got null
